feat: user info,jwt login
1.1.0
